# bom_manager

./: .gitignore  CLAUDE.md  CLI.md  README.md  pyproject.toml
scripts/: capture_detail.py  test_lcsc.py
src/bom_manager/: __init__.py
src/bom_manager/core/: __init__.py  bom_service.py  currency.py  exceptions.py  models.py  project_service.py  settings_service.py
src/bom_manager/interfaces/: __init__.py  cli.py  main.py  tui.py
src/bom_manager/storage/: __init__.py  base.py  sqlite.py
src/bom_manager/suppliers/: __init__.py  base.py  lcsc.py  lion.py
