[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bom-manager"
version = "0.1.0"
description = "Bill of Materials manager with supplier integration"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "curl_cffi>=0.7.0",
    "playwright>=1.40.0",
    "openpyxl>=3.1.0",
    "textual>=0.50.0",
    "selectolax>=0.3.21",
]

[project.scripts]
bom = "bom_manager.interfaces.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bom_manager"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
